unpackaged/main/default/objects/Simulador_N__c/Simulador_N__c.object-meta.xml
<CustomObject>
    <label>Simulador_N</label>
    <nameField>
        <label>Nombre de Simulador_N</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Simuladores_N</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>