unpackaged/main/default/objects/Simulador_N__c/fields/CapacidadCompra__c.field-meta.xml
<CustomField>
    <fullName>CapacidadCompra__c</fullName>
    <label>CapacidadCompra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>