unpackaged/main/default/objects/Simulador_N__c/fields/CuentaSimu__c.field-meta.xml
<CustomField>
    <fullName>CuentaSimu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Simuladores_N</relationshipLabel>
    <relationshipName>Simuladores_N</relationshipName>
    <type>Lookup</type>
</CustomField>