unpackaged/main/default/objects/Simulador_N__c/fields/Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamiento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fraccionamiento</label>
    <referenceTo>Fraccionamiento__c</referenceTo>
    <relationshipLabel>Simuladores_N</relationshipLabel>
    <relationshipName>Simuladores_N</relationshipName>
    <type>Lookup</type>
</CustomField>